Fix Frontend process to display list of part of speech
- Change to the method of retrieving part of speech list from DB
- Fix test code for this function

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,11 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(axios)/)"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -47,5 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-mock-store": "^1.0.6",
+    "redux-mock-store": "^1.5.4"
   }
 }
