--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^5.0.1",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
     "react-select-event": "^5.5.1",
