--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /frontend/node_modules
+/frontend/build
 /backend/backend/secret_settings.py
 __pycache__
 db-volumes/
@@ -7,3 +8,4 @@ db.sqlite3
 *.pyc
 .DS_Store
 .venv
+package-lock.json
